# ossip

./: .gitignore  AGENTS.md  README.md  local_build.sh  pyproject.toml  pytest.ini
.github/workflows/: publish.yaml  test.yaml  update-keys.yaml
cache/: flip_mentions_metadata.json  flip_wiki_cache.json  kip_mentions_metadata.json  kip_wiki_cache.json
cache/flink_mailbox_files/: flip_mentions.csv
cache/keys/: flink_keys.json  kafka_keys.json
cache/mailbox_files/: kip_mentions.csv
docs/superpowers/specs/: 2026-04-30-json-api-and-skill-design.md
ipper/: main.py
ipper/common/: constants.py  jira.py  keys.py  mailing_list.py  utils.py  wiki.py
ipper/flink/: mailing_list.py  main.py  output.py  wiki.py
ipper/kafka/: mailing_list.py  main.py  output.py  wiki.py
templates/: _footer.html  flink-index.html.jinja  flip-more-info.html.jinja  flip-raw-info.html.jinja  index.html  kafka-index.html.jinja  kip-more-info.html.jinja  style.css
templates/assets/: table-filter.js  theme-toggle.js
tests/: conftest.py
tests/common/: test_keys.py  test_mailing_list.py  test_utils.py
tests/flink/: test_output.py
tests/kafka/: test_output.py  test_wiki.py
