[project]
name = "ipper"
version = "0.2.0"
description = "A hub for Open Source Software Improvement Proposals"
authors = [
    { name = "Thomas Cooper", email = "code@tomcooper.dev" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "beautifulsoup4>=4.10.0",
    "pandas>=2.2.3",
    "Jinja2>=3.1.4",
    "jira>=3.8.0",
]

[dependency-groups]
dev = [
    "ipython>=8.29.0",
    "pylint>=3.3.3",
    "black>=24.10.0",
    "mypy>=1.14.0",
    "types-requests>=2.32.0.20241016",
    "ipdb>=0.13.13",
    "pandas-stubs>=2.2.3.241126",
    "types-beautifulsoup4>=4.12.0.20241020",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "freezegun>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
