[project]
name = "ipper"
version = "0.2.0"
description = "A hub for Open Source Software Improvement Proposals"
authors = [
    { name = "Thomas Cooper", email = "code@tomcooper.dev" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "beautifulsoup4>=4.10.0",
    "pandas>=2.2.3",
    "Jinja2>=3.1.4",
    "jira>=3.8.0",
    "python-dateutil>=2.9.0.post0",
]

[dependency-groups]
dev = [
    "ipython>=8.29.0",
    "mypy>=1.14.0",
    "types-requests>=2.32.0.20241016",
    "ipdb>=0.13.13",
    "pandas-stubs>=2.2.3.241126",
    "types-beautifulsoup4>=4.12.0.20241020",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "freezegun>=1.5.0",
    "ruff>=0.8.0",
    # Keeping these for now, can remove after Ruff is validated:
    "pylint>=3.3.3",
    "black>=24.10.0",
    "types-python-dateutil>=2.9.0.20260124",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# Target Python 3.12+
target-version = "py312"

# Same line length as Black
line-length = 88

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "cache",
    "site_files",
    "htmlcov",
]

[tool.ruff.lint]
# Enable rule sets
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes (includes unused imports F401)
    "B",      # flake8-bugbear (common bugs)
    "I",      # isort (import sorting)
    "UP",     # pyupgrade (modern Python idioms)
    "SIM",    # simplify (code simplifications)
    "C4",     # flake8-comprehensions
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
]

# Allow auto-fixing for all enabled rules
fixable = ["ALL"]
unfixable = []

# Per-file rule ignores
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py files
"tests/**/*.py" = ["S101"]  # Allow asserts in tests

[tool.ruff.format]
# Use double quotes (like Black)
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Auto-detect line endings
line-ending = "auto"
